--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "chai": "^5.2.0",
     "codeceptjs": "^3.7.3",
     "cookie-parser": "^1.4.7",
+    "css-loader": "^7.1.2",
     "express": "^5.1.0",
     "fs": "^0.0.1-security",
     "glob": "^11.0.2",
@@ -14,6 +15,7 @@
     "sass": "^1.87.0",
     "sass-loader": "^16.0.5",
     "serve-favicon": "^2.5.0",
+    "style-loader": "^4.0.0",
     "supertest": "^7.1.0",
     "webpack-cli": "^6.0.1",
     "webpack-dev-middleware": "^7.4.2"
@@ -35,6 +37,7 @@
     "typescript": "^5.8.3"
   },
   "scripts": {
-    "dev": "npx tsx src/main/server.ts"
+    "dev": "npx tsx src/main/server.ts",
+    "build": "npx webpack --config webpack.config.js --mode production"
   }
 }
